fixed off-centreness

--- a/assets/style/master.less
+++ b/assets/style/master.less
@@ -5,12 +5,6 @@ body
     font-family: Roboto;
     background-color: #2d2e2f;
     color: white;
-    position: fixed;
-    max-width: 1080px;
-    top: 50%;
-    left: 50%;
-    right: -50%;
-    transform: translate(-50%, -50%);
 }
 
 h1, h2, h3, h4
@@ -75,20 +69,19 @@ a
     text-align: center;
     font-size: 10em;
     letter-spacing: 0.5em;
+    padding-left: 0.5em;
     z-index: -1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     vertical-align: middle;
     margin: 0;
     padding: 0;
-    filter: blur(1px);
-
-    animation-name: blur-in;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-fill-mode: both;
+    filter: blur(1pt);
+    color: #f95088;
+    font-family: 'Bungee Shade', cursive;
 }
 
 #overlay
@@ -97,7 +90,8 @@ a
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%;
+    max-width: 1080px;
+    right: -50%;
     padding: 2em;
     transform: translate(-50%, -50%);
 }
